--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@maplibre/maplibre-react-native": "^10.4.2",
+    "@turf/boolean-intersects": "^7.2.0",
+    "@turf/circle": "^7.2.0",
+    "@turf/union": "^7.2.0",
     "expo": "~54.0.30",
     "expo-location": "~19.0.8",
     "expo-sqlite": "~16.0.10",
