--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@turf/circle": "^7.2.0",
     "@turf/union": "^7.2.0",
     "expo": "~54.0.30",
+    "expo-dev-client": "~6.0.20",
     "expo-location": "~19.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
