--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@maplibre/maplibre-react-native": "^10.4.2",
     "@turf/boolean-intersects": "^7.2.0",
     "@turf/circle": "^7.2.0",
+    "@turf/difference": "^7.2.0",
     "@turf/union": "^7.2.0",
+    "buffer": "^6.0.3",
+    "react-native-ble-plx": "^3.2.1",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
     "expo-location": "~19.0.8",
