--- a/app.json
+++ b/app.json
@@ -19,9 +19,12 @@
         "NSLocationWhenInUseUsageDescription": "This app uses your location to reveal the map as you explore new areas.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app tracks your location in the background to continue revealing the map as you explore.",
         "NSLocationAlwaysUsageDescription": "This app tracks your location in the background to continue revealing the map as you explore.",
+        "NSBluetoothAlwaysUsageDescription": "This app uses Bluetooth to share your explored locations with nearby friends.",
+        "NSBluetoothPeripheralUsageDescription": "This app uses Bluetooth to share your explored locations with nearby friends.",
         "UIBackgroundModes": [
           "location",
-          "location"
+          "bluetooth-central",
+          "bluetooth-peripheral"
         ],
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -40,11 +43,21 @@
         "ACCESS_BACKGROUND_LOCATION",
         "FOREGROUND_SERVICE",
         "FOREGROUND_SERVICE_LOCATION",
+        "BLUETOOTH",
+        "BLUETOOTH_ADMIN",
+        "BLUETOOTH_SCAN",
+        "BLUETOOTH_CONNECT",
+        "BLUETOOTH_ADVERTISE",
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_BACKGROUND_LOCATION",
         "android.permission.FOREGROUND_SERVICE",
-        "android.permission.FOREGROUND_SERVICE_LOCATION"
+        "android.permission.FOREGROUND_SERVICE_LOCATION",
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.BLUETOOTH_SCAN",
+        "android.permission.BLUETOOTH_CONNECT",
+        "android.permission.BLUETOOTH_ADVERTISE"
       ]
     },
     "web": {
@@ -62,7 +75,15 @@
           "isAndroidForegroundServiceEnabled": true
         }
       ],
-      "@maplibre/maplibre-react-native"
+      "@maplibre/maplibre-react-native",
+      [
+        "react-native-ble-plx",
+        {
+          "isBackgroundEnabled": true,
+          "modes": ["peripheral", "central"],
+          "bluetoothAlwaysPermission": "This app uses Bluetooth to share your explored locations with nearby friends."
+        }
+      ]
     ],
     "extra": {
       "eas": {
